--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+	<img src="https://images.unsplash.com/photo-1564640227760-db286729bf83?q=80&w=1836&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+	<h1>Pricing Card</h1>
+	<p>Price:Rs.200</p>
+	<p>Description: yet a beauty</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
